--- a/README
+++ b/README
@@ -2,4 +2,7 @@ This is an attempt to improve the original fixobjc.idc script by Willem Jan Heng
 
 For now it's only compatible with Mach-O 32bits binaries for Mac OS X.
 
+My goal is to make it compatible with all Mac OS X and iOS binaries.
+
 fG!
+
